lamp error: shadow influence #41957

Closed
opened 2014-09-25 21:12:44 +02:00 by Alexey · 7 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
this bug active on all types of lamp, except hemi, because hemi have not shadow
shadow_influence1.png
shadow_influence2.png
shadow_influence3.png
Exact steps for others to reproduce the error
open this,select rendered shading mode, shadow_influence.blend
change shadow influence - we have not see change changing in 3d view
change color influence - we will see change shadow influence.

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) Short description of error this bug active on all types of lamp, except hemi, because hemi have not shadow ![shadow_influence1.png](https://archive.blender.org/developer/F112480/shadow_influence1.png) ![shadow_influence2.png](https://archive.blender.org/developer/F112482/shadow_influence2.png) ![shadow_influence3.png](https://archive.blender.org/developer/F112484/shadow_influence3.png) **Exact steps for others to reproduce the error** open this,select rendered shading mode, [shadow_influence.blend](https://archive.blender.org/developer/F112489/shadow_influence.blend) change shadow influence - we have not see change changing in 3d view change color influence - we will see change shadow influence.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-25 21:12:44 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

im sorry if i was repeat this report after anybody.
i was search closely before write about this bug.

but i think better i was write again, than bug will not finded and fixed.

im sorry if i was repeat this report after anybody. i was search closely before write about this bug. but i think better i was write again, than bug will not finded and fixed.
Alexey was unassigned by Sergey Sharybin 2014-09-26 10:19:31 +02:00
Sergey Sharybin self-assigned this 2014-09-26 10:19:31 +02:00

This issue was referenced by 025955e549

This issue was referenced by 025955e54952ee9bf8a08333220b69c739a4d871

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 025955e549.

Closed by commit 025955e549.

This issue was referenced by 69f071a47d

This issue was referenced by 69f071a47dbe9ed0feda9f4caa2a6cc1d11e4d98
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41957
No description provided.