Fix T41957: Shadow color texture mapping was using wrong factor