source/blender/render/intern/source/render_texture.c
@@ -3396,8 +3396,11 @@ void do_lamp_tex(LampRen *la, const float lavec[3], ShadeInput *shi, float col_r
 				col[0]= texres.tr*la->energy;
 				col[1]= texres.tg*la->energy;
 				col[2]= texres.tb*la->energy;
-				
-				texture_rgb_blend(col_r, col, col_r, texres.tin, mtex->colfac, mtex->blendtype);
+
+				if (effect & LA_SHAD_TEX)
+					texture_rgb_blend(col_r, col, col_r, texres.tin, mtex->shadowfac, mtex->blendtype);
+				else
+					texture_rgb_blend(col_r, col, col_r, texres.tin, mtex->colfac, mtex->blendtype);
 			}
 		}
 	}
